該死的menu完工、更新捷運滑到才開始動畫、新增影片popup

--- a/index.html
+++ b/index.html
@@ -37,9 +37,16 @@
                 </div>
             </div>
         </div>
+        <div class="lightbox"><a class="close-btn abs" href="#"> <img src="asset/svg/close.svg" alt=""/></a>
+            <div class="container">
+                <div class='embed-container'>
+                    
+                </div>
+            </div>
+        </div>
         <!-- content-->
         <div class="wrap">
-            <!-- fixed btn go--><a class="btn-go" href="#">最新優惠</a>
+            <!-- fixed btn go--><a class="btn-go" href="https://www.yannick.com.tw/choose.php?choose_sn=22" target="_blank">最新優惠</a>
             <!-- m menu btn-->
             <!--add '.open-btn' when open header--><a class="menu-btn" href="#"></a>
             <!--kv-->
@@ -93,19 +100,22 @@
             <!-- header-->
             <!--pc-add '.scrolled'-->
             <!--m-add '.open-header'-->
-            <header>
-                <ul>
-                    <li><a class="active" href="#"><span class="icon cake"><img src="img/menu-1.png" alt=""/></span><span>開幕送冠軍生乳捲</span></a></li>
-                    <li><a href="#"><span class="icon"><img src="img/menu-2.png" alt=""/></span><span>YTM 限定優惠</span></a></li>
-                    <li><a href="#"><span class="icon"><img src="img/menu-3.png" alt=""/></span><span>官網訂購 2hrs 提領</span></a></li>
-                    <li><a href="#"><span class="icon"><img src="img/menu-4.png" alt=""/></span><span>YTM 特色服務</span></a></li>
-                </ul>
-            </header>
+            <div class="menu_header">
+                <div class="header_hide"></div>
+                <header>
+                    <ul>
+                        <li><a class="active" href="#"><span class="icon cake"><img src="img/menu-1.png" alt=""/></span><span>開幕送冠軍生乳捲</span></a></li>
+                        <li><a href="#"><span class="icon"><img src="img/menu-2.png" alt=""/></span><span>YTM 限定優惠</span></a></li>
+                        <li><a href="#"><span class="icon"><img src="img/menu-3.png" alt=""/></span><span>官網訂購 2hrs 提領</span></a></li>
+                        <li><a href="#"><span class="icon"><img src="img/menu-4.png" alt=""/></span><span>YTM 特色服務</span></a></li>
+                    </ul>
+                </header>
+            </div>
             <!--video-->
             <section class="video">
                 <h2><span class="por">天天都是值得分享小事<span class="fork abs"><img src="img/fork.png" alt=""/></span></span><span class="break-m por">的大日子<span class="knife abs"><img src="img/knife.png" alt=""/></span><span class="heart abs none-m"><img src="img/love.png" alt=""/></span></span></h2>
                 <div class="sub"> <span>捷運隨時提領，</span><span class="ytm"><img src="img/ytm.png" alt=""/></span><span>讓分享變得更簡單</span></div>
-                <div class="videoBox por"><a class="por" href="#">
+                <div class="videoBox por"><a class="por" href="#" data-video="123">
                     <div class="icon-play abs"><img src="asset/svg/play.svg" alt=""/>
                     </div>
                     <div class="pic"><img src="img/video.jpg" alt=""/>
@@ -208,7 +218,7 @@
                         <ul>
                             <li>『線上訂 線下取 查詢庫存 即時方便』</li>
                             <li><span>不論您是直接購買、訂單取貨，</span><span>或會員隨享卡提領，都能輕易上手</span></li>
-                            <li><a class="videoBox por" href="#"><span class="pic"><img src="img/video.jpg" alt=""/></span><span class="icon-play"><img src="asset/svg/play.svg" alt=""/></span></a></li>
+                            <li><a class="videoBox por" href="#" data-video="456"><span class="pic"><img src="img/video.jpg" alt=""/></span><span class="icon-play"><img src="asset/svg/play.svg" alt=""/></span></a></li>
                             <li class="red"><span class="por line-cir">購買流程簡單方便</span></li>
                         </ul>
                     </div>
@@ -216,7 +226,7 @@
                         <ul>
                             <li>『不偷工 不減料 新鮮製作 新鮮販售』</li>
                             <li><span>亞尼克重視食品安全與衛生，</span><span>高規格的維護 SOP 將確保產品新鮮供應</span></li>
-                            <li><a class="videoBox por" href="#"><span class="pic"><img src="img/video.jpg" alt=""/></span><span class="icon-play"><img src="asset/svg/play.svg" alt=""/></span></a></li>
+                            <li><a class="videoBox por" href="#" data-video="789"><span class="pic"><img src="img/video.jpg" alt=""/></span><span class="icon-play"><img src="asset/svg/play.svg" alt=""/></span></a></li>
                             <li class="red"><span class="por line-cir">定時維護安全衛生</span></li>
                         </ul>
                     </div>
