拿掉footer文字、新增kv動態

--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
         <script src="vendor/jquery-3.2.1.min.js"></script>
         <script src="vendor/TweenMax.min.js"></script>
         <script src="vendor/isMobile.min.js"></script>
+        <script src="vendor/scrollreveal.min.js"></script>
     </head>
     <body>
         <div class="trans_bg">
@@ -288,7 +289,7 @@
                 <div class="main flex-mid por">
                     <div class="mrt-cart abs"><img src="img/footer-mrt.png" alt=""/>
                     </div>
-                    <div class="left flex-mid"><a class="footer-logo" href="#"><img src="asset/svg/logo.svg" alt=""/></a>
+                    <!--<div class="left flex-mid"><a class="footer-logo" href="#"><img src="asset/svg/logo.svg" alt=""/></a>
                         <ul>
                             <li>亞尼克誠摯歡迎您蒞臨體驗!</li>
                             <li>如有任何疑問，請撥打客服專線 (02) 2659-6442 </li>
@@ -298,7 +299,7 @@
                     <div class="right none-m">
                         <div class="social"><span>Follow us</span><span></span><a class="fb" href="#"><img src="asset/svg/fb.svg" alt=""/></a><a class="ig" href="#"><img src="asset/svg/ig.svg" alt=""/></a><a class="line" href="#"><img src="asset/svg/line.svg" alt=""/></a></div>
                         <p>© 2018 亞尼克購物商城 All Rights Reserved</p>
-                    </div>
+                    </div>-->
                 </div>
             </footer>
         </div>
