kv效果改TM做、page進場done(初版)

--- a/index.html
+++ b/index.html
@@ -193,7 +193,7 @@
                         <h2> <span class="por">購買生乳捲<span class="tt-gift abs"><img src="asset/svg/gift.svg" alt=""/></span></span><span class="red">即贈『生乳捲輕巧袋』</span></h2>
                         <p> <span>YTM 生乳捲每日新鮮配送冷藏。</span><span>購買時我們將隨包裝附贈『生乳捲輕巧袋』 </span><span>方便您提領後放入保冷劑， </span><span>以維持生乳捲最新鮮狀態。</span></p>
                         <div class="gift-bag abs">
-                            <div class="inner">
+                            <div class="inner show">
                                 <div class="bag"><img src="img/gift-bag.png" alt=""/>
                                 </div>
                                 <div class="leaf1 abs"><img src="img/leaf1.png" alt=""/>
@@ -258,7 +258,7 @@
                                 <div class="tt por">文湖線</div>
                                 <p>中山國中、科技大樓、港墘</p>
                             </li>
-                            <li>
+                            <li class="show">
                                 <div class="tt por">淡水信義線</div>
                                 <p>北投、石牌、士林、劍潭、圓山、<span class="red">民權西路</span>、雙連、<span class="red">中山</span>、<span class="red">台北車站</span>、台大醫院、<span class="red">中正紀念堂</span>、<span class="red">東門</span>、<span class="red">大安</span>、信義安和、台北 101/世貿</p>
                             </li>
