新增捷運地圖popup、更新css、給客戶v4

--- a/index.html
+++ b/index.html
@@ -27,23 +27,10 @@
     </head>
     <body>
         <div class="yannick">
-            <div class="trans_bg">
-                <div class="trans_ipad">
-                    <div class="trans_center"><img src="img/ipad_ok.png">                
-                        <p>請將裝置轉至橫式<br>體驗最佳瀏覽方式</p>
-                    </div>
-                </div>
-                <div class="trans_iphone">
-                    <div class="trans_center"><img src="img/iphone_ok.png">                
-                        <p>請將裝置轉至直式<br>體驗最佳瀏覽方式</p>
-                    </div>
-                </div>
-            </div>
             <div class="lightbox"><a class="close-btn abs" href="#"> <img src="asset/svg/close.svg" alt=""/></a>
                 <div class="container">
-                    <div class='embed-container'>
-
-                    </div>
+                    <div class='embed-container'></div>
+                    <img class='map_img' src="img/map.jpg" alt="">
                 </div>
             </div>
             <!-- content-->
@@ -117,7 +104,7 @@
                 <section class="video">
                     <h2><span class="por">天天都是值得分享小事<span class="fork abs"><img src="img/fork.png" alt=""/></span></span><span class="break-m por">的大日子<span class="knife abs"><img src="img/knife.png" alt=""/></span><span class="heart abs none-m"><img src="img/love.png" alt=""/></span></span></h2>
                     <div class="sub"> <span>捷運隨時提領，</span><span class="ytm"><img src="img/ytm.png" alt=""/></span><span>讓分享變得更簡單</span></div>
-                    <div class="videoBox por"><a class="por" href="#" data-video="123">
+                    <div class="videoBox por"><a class="por" href="#" data-video="sdkfB3BPGmM">
                         <div class="icon-play abs"><img src="asset/svg/play.svg" alt=""/>
                         </div>
                         <div class="pic"><img src="img/video.jpg" alt=""/>
@@ -253,7 +240,7 @@
                             <ul>
                                 <li>
                                     <div class="tt por">板南線</div>
-                                    <p> <span class="red">南港展覽館</span>、南港、後山埤、永春、市政府、國父紀念館、<span class="red">忠孝敦化</span>、<span class="red">忠孝復興</span>、忠孝新生、善導寺、龍山寺、 江子翠、新埔、板橋、府中、海山、永寧</p>
+                                    <p> <span class="red">南港展覽館</span>、南港、後山埤、永春、市政府、國父紀念館、忠孝敦化、<span class="red">忠孝復興</span>、<span class="red">忠孝新生</span>、善導寺、龍山寺、 江子翠、新埔、板橋、府中、海山、永寧</p>
                                 </li>
                                 <li>
                                     <div class="tt por">文湖線</div>
@@ -290,17 +277,6 @@
                     <div class="main flex-mid por">
                         <div class="mrt-cart abs"><img src="img/footer-mrt.png" alt=""/>
                         </div>
-                        <!--<div class="left flex-mid"><a class="footer-logo" href="#"><img src="asset/svg/logo.svg" alt=""/></a>
-                            <ul>
-                                <li>亞尼克誠摯歡迎您蒞臨體驗!</li>
-                                <li>如有任何疑問，請撥打客服專線 (02) 2659-6442 </li>
-                                <li>服務時間:週一至週日，6:00 ~ 24:00</li>
-                            </ul>
-                        </div>
-                        <div class="right none-m">
-                            <div class="social"><span>Follow us</span><span></span><a class="fb" href="#"><img src="asset/svg/fb.svg" alt=""/></a><a class="ig" href="#"><img src="asset/svg/ig.svg" alt=""/></a><a class="line" href="#"><img src="asset/svg/line.svg" alt=""/></a></div>
-                            <p>© 2018 亞尼克購物商城 All Rights Reserved</p>
-                        </div>-->
                     </div>
                 </footer>
             </div>
