調整menu  resize、更新css、給客戶v5

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                 <!--add '.open-btn' when open header--><a class="menu-btn" href="#"></a>
                 <!--kv-->
                 <section class="kv">
-                    <h1><span> <span class="por">亞尼克歡慶<span class="b3 abs"><img src="img/b3.png" alt=""/></span></span><span class="year"><img src="img/18.png" alt=""/></span><span>週年</span></span><span><span class="por"> <span class="ytm"><img src="img/ytm.png" alt=""/></span><span>進駐</span><span class="b1 abs"><img src="img/b1.png" alt=""/></span></span><span class="line-cir"><span>台北捷運站</span><span class="b2 abs"><img src="img/b2.png" alt=""/></span></span></span></h1>
+                    <h1><span> <span class="por">亞尼克歡慶<span class="b3 abs"><img src="img/b3.png" alt=""/></span></span><span class="year"><img src="img/18.png" alt=""/></span><span>週年</span></span><span><span class="por"> <span class="ytm"><img src="img/ytm.png" alt=""/></span><span>進駐</span><span class="b1 abs"><img src="img/b1.png" alt=""/></span></span><span class="line-cir"><span>台北捷運站</span><span class="b2 abs"><img src="img/b2.png" alt=""/></span></span></span></h1>
                     <div class="flagBox abs">
                         <div class="flag-l"><img src="img/flag-l.png" alt=""/>
                         </div>
