更新css、修正IE動態壞掉、給客戶v5

--- a/index.html
+++ b/index.html
@@ -156,7 +156,9 @@
                             <div class="price red">$420</div>
                         </div>
                         <div class="item">
-                            <div class="pic"><img src="img/pic2.jpg" alt=""/>
+                            <div class="picBox por">
+                                <div class="pic"><img src="img/pic2.jpg" alt=""/>
+                                </div>
                             </div>
                             <div class="tt"> <span class="por">生乳捲-荔枝好芒<span class="icon2 abs"><img src="img/new.png" alt=""/></span></span></div>
                             <p>將北海道奶霜融入浸泡多 時的茶葉後打發，茶香更 顯醇厚迷人，溫潤甘甜的 茶香滋味與入口即化的奶 霜質感，清爽裡洋溢著耐 人尋味的餘韻。</p>
@@ -225,10 +227,10 @@
                 <section class="feature">
                     <h2><span class="por"><span class="ytm"><img src="img/ytm.png" alt=""/></span><span>服務特色</span><span class="line-red abs"><img src="img/line-m-2.png" alt=""/></span><span class="deco abs"><img src="img/tt-hightline.png" alt=""/></span></span></h2>
                     <ul class="flex-mid">
-                        <li class="bag"><span class="icon"><img src="img/bag.png" alt=""/></span><span class="tt">購買便利</span><span class="txt"><span>據點更多</span><span>站內不打烊</span></span></li>
-                        <li class="cake"><span class="icon"><img src="img/cake.png" alt=""/></span><span class="tt">新鮮衛生</span><span class="txt"><span>高規格品管</span><span>安全清潔</span></span></li>
-                        <li class="pay"><span class="icon"><img src="img/mrt-card.png" alt=""/></span><span class="tt">多元支付</span><span class="txt"><span>免現金</span><span>支援隨享卡/悠遊卡/<span class="break-m">信用卡</span></span></span></li>
-                        <li class="buy"><span class="icon"><img src="img/coin.png" alt=""/></span><span class="tt">團購模式</span><span class="txt"><span>線上寄捲</span><span>大量購買提領更優惠!</span></span></li>
+                        <li class="bag"><span class="icon"><img src="img/bag.png" alt=""/></span><span class="tt">購買便利</span><span class="txt"><span>據點更多</span><span>站內不打烊</span></span></li>
+                        <li class="cake"><span class="icon"><img src="img/cake.png" alt=""/></span><span class="tt">新鮮衛生</span><span class="txt"><span>高規格品管</span><span>安全清潔</span></span></li>
+                        <li class="pay"><span class="icon"><img src="img/mrt-card.png" alt=""/></span><span class="tt">多元支付</span><span class="txt"><span>免現金</span><span>支援隨享卡/悠遊卡/<span class="break-m">信用卡</span></span></span></li>
+                        <li class="buy"><span class="icon"><img src="img/coin.png" alt=""/></span><span class="tt">團購模式</span><span class="txt"><span>線上寄捲</span><span>大量購買提領更優惠!</span></span></li>
                     </ul>
                 </section>
                 <!--location-->
