更新self.css、更新css、開popup、更新img/video的popuo、給客戶v6

--- a/index.html
+++ b/index.html
@@ -30,7 +30,6 @@
             <div class="lightbox"><a class="close-btn abs" href="#"> <img src="asset/svg/close.svg" alt=""/></a>
                 <div class="container">
                     <div class='embed-container'></div>
-                    <img class='map_img' src="img/map.jpg" alt="">
                 </div>
             </div>
             <!-- content-->
@@ -104,7 +103,7 @@
                 <section class="video">
                     <h2><span class="por">天天都是值得分享小事<span class="fork abs"><img src="img/fork.png" alt=""/></span></span><span class="break-m por">的大日子<span class="knife abs"><img src="img/knife.png" alt=""/></span><span class="heart abs none-m"><img src="img/love.png" alt=""/></span></span></h2>
                     <div class="sub"> <span>捷運隨時提領，</span><span class="ytm"><img src="img/ytm.png" alt=""/></span><span>讓分享變得更簡單</span></div>
-                    <div class="videoBox por"><a class="por" href="#" data-video="sdkfB3BPGmM">
+                    <div class="videoBox por"><a class="por" href="#" data-video="dKrRetTvULs">
                         <div class="icon-play abs"><img src="asset/svg/play.svg" alt=""/>
                         </div>
                         <div class="pic"><img src="img/video.jpg" alt=""/>
@@ -209,7 +208,7 @@
                             <ul>
                                 <li>『線上訂 線下取 查詢庫存 即時方便』</li>
                                 <li><span>不論您是直接購買、訂單取貨，</span><span>或會員隨享卡提領，都能輕易上手</span></li>
-                                <li><a class="videoBox por" href="#" data-video="456"><span class="pic"><img src="img/video.jpg" alt=""/></span><span class="icon-play"><img src="asset/svg/play.svg" alt=""/></span></a></li>
+                                <li><a class="videoBox por" href="#" data-video="QEjhlFilViI"><span class="pic"><img src="img/video.jpg" alt=""/></span><span class="icon-play"><img src="asset/svg/play.svg" alt=""/></span></a></li>
                                 <li class="red"><span class="por line-cir">購買流程簡單方便</span></li>
                             </ul>
                         </div>
@@ -217,7 +216,7 @@
                             <ul>
                                 <li>『不偷工 不減料 新鮮製作 新鮮販售』</li>
                                 <li><span>亞尼克重視食品安全與衛生，</span><span>高規格的維護 SOP 將確保產品新鮮供應</span></li>
-                                <li><a class="videoBox por" href="#" data-video="789"><span class="pic"><img src="img/video.jpg" alt=""/></span><span class="icon-play"><img src="asset/svg/play.svg" alt=""/></span></a></li>
+                                <li><a class="videoBox por" href="#" data-video="CW4mmVENANo"><span class="pic"><img src="img/video.jpg" alt=""/></span><span class="icon-play"><img src="asset/svg/play.svg" alt=""/></span></a></li>
                                 <li class="red"><span class="por line-cir">定時維護安全衛生</span></li>
                             </ul>
                         </div>
