更新css、js加上打頭、更新兩個外連網址、給客戶v7

--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="btnBox"><a class="btn" href="#" data-text="線上申辦/儲值">線上申辦/儲值</a><a class="btn" href="#" data-text="儲值$2,000送1條">儲值$2,000送1條</a></div>
+                    <div class="btnBox"><a class="btn" href="https://www.yannick.com.tw/index.php" data-text="線上申辦/儲值" target="_blank">線上申辦/儲值</a><a class="btn" href="https://www.yannick.com.tw/news.php?nid=295" data-text="儲值$2,000送1條" target="_blank">儲值$2,000送1條</a></div>
                 </section>
                 <!--product-->
                 <section class="product">
