捷運圖改另開、更新css、給客戶v7

--- a/index.html
+++ b/index.html
@@ -271,7 +271,7 @@
                             <div class="star3 abs"><img src="asset/svg/star3.svg" alt=""/>
                             </div>
                         </div>
-                    </div><a class="btn" href="#" data-text="線上捷運地圖">線上捷運地圖</a>
+                    </div><a class="btn" href="https://fs1.shop123.com.tw/400189/upload/harddisc/4001890_file_622595638142018053056.jpg" data-text="線上捷運地圖" target="_blank">線上捷運地圖</a>
                 </section>
                 <!--footer-->
                 <footer>
