調整css、修正js、拿掉html亂碼、新增影片截圖

--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
                     <div class="videoBox por"><a class="por" href="#" data-video="dKrRetTvULs">
                         <div class="icon-play abs"><img src="asset/svg/play.svg" alt=""/>
                         </div>
-                        <div class="pic"><img src="img/video.jpg" alt=""/>
+                        <div class="pic"><img src="img/video1.jpg" alt=""/>
                         </div></a>
                         <div class="girl abs none-m"><img src="img/girls.png" alt=""/>
                         </div>
@@ -208,7 +208,7 @@
                             <ul>
                                 <li>『線上訂 線下取 查詢庫存 即時方便』</li>
                                 <li><span>不論您是直接購買、訂單取貨，</span><span>或會員隨享卡提領，都能輕易上手</span></li>
-                                <li><a class="videoBox por" href="#" data-video="QEjhlFilViI"><span class="pic"><img src="img/video.jpg" alt=""/></span><span class="icon-play"><img src="asset/svg/play.svg" alt=""/></span></a></li>
+                                <li><a class="videoBox por" href="#" data-video="QEjhlFilViI"><span class="pic"><img src="img/video2.jpg" alt=""/></span><span class="icon-play"><img src="asset/svg/play.svg" alt=""/></span></a></li>
                                 <li class="red"><span class="por line-cir">購買流程簡單方便</span></li>
                             </ul>
                         </div>
@@ -216,7 +216,7 @@
                             <ul>
                                 <li>『不偷工 不減料 新鮮製作 新鮮販售』</li>
                                 <li><span>亞尼克重視食品安全與衛生，</span><span>高規格的維護 SOP 將確保產品新鮮供應</span></li>
-                                <li><a class="videoBox por" href="#" data-video="CW4mmVENANo"><span class="pic"><img src="img/video.jpg" alt=""/></span><span class="icon-play"><img src="asset/svg/play.svg" alt=""/></span></a></li>
+                                <li><a class="videoBox por" href="#" data-video="CW4mmVENANo"><span class="pic"><img src="img/video3.jpg" alt=""/></span><span class="icon-play"><img src="asset/svg/play.svg" alt=""/></span></a></li>
                                 <li class="red"><span class="por line-cir">定時維護安全衛生</span></li>
                             </ul>
                         </div>
