issue修正、給客戶v9

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
             </div>
             <!-- content-->
             <div class="wrap">
-                <!-- fixed btn go--><a class="btn-go" href="https://www.yannick.com.tw/choose.php?choose_sn=22" target="_blank">最新優惠</a>
+                <!-- fixed btn go--><a class="btn-go" href="https://www.yannick.com.tw/choose.php?choose_sn=22" target="_blank">立即訂購</a>
                 <!-- m menu btn-->
                 <!--add '.open-btn' when open header--><a class="menu-btn" href="#"></a>
                 <!--kv-->
@@ -117,7 +117,7 @@
                 <!--card-->
                 <section class="card">
                     <h2>週年慶限定活動</h2>
-                    <h3><span>亞尼克『隨享卡』辦卡、儲值2000</span><span class="none-m">, </span><span class="red por">送亞尼克生乳捲(原味)乙條<span class="cup abs"><img src="img/cup.png" alt=""/></span></span></h3>
+                    <h3><span>亞尼克「隨享卡」辦卡儲值並不限金額消費</span><span class="none-m">, </span><span class="red por">就送亞尼克生乳捲(原味)乙條<span class="cup abs"><img src="img/cup.png" alt=""/></span></span></h3>
                     <div class="main">
                         <div class="wording">
                             <ul>
@@ -150,20 +150,20 @@
                                 <div class="tape1 abs none-m"><img src="img/tape.png" alt=""/>
                                 </div>
                             </div>
-                            <div class="tt"> <span class="por">生乳捲-北海道起司<span class="icon1 abs"><img src="img/menu-2.png" alt=""/></span></span></div>
-                            <p class="cheese">意想不到的起司質感!找到兩種 起司與北海道奶霜融合的絕佳比 例，可以同時享受起司濃厚稠密 的口感與細緻爽口的奶霜質地， 冰涼微酸比優格更加迷人。</p>
-                            <div class="price red">$420</div>
+                            <div class="tt"> <span class="por">北海道起司生乳捲<span class="icon1 abs"><img src="img/menu-2.png" alt=""/></span></span></div>
+                            <p class="cheese">泡芙蛋糕/北海道奶霜/北海道高梨起司/伊思尼法國諾曼第白起司找到兩種起司與北海道奶霜融合的絕佳比例，可以同時享受起司獨特的乳酸風味和入口即融的的奶霜質地，冰涼微酸，比優格更加清爽迷人。</p>
+                            <div class="price red">$420</div><a class="btn" href="#" data-text="立即訂購">立即訂購</a>
                         </div>
                         <div class="item">
                             <div class="picBox por">
                                 <div class="pic"><img src="img/pic2.jpg" alt=""/>
                                 </div>
                             </div>
-                            <div class="tt"> <span class="por">生乳捲-荔枝好芒<span class="icon2 abs"><img src="img/new.png" alt=""/></span></span></div>
-                            <p>將北海道奶霜融入浸泡多 時的茶葉後打發，茶香更 顯醇厚迷人，溫潤甘甜的 茶香滋味與入口即化的奶 霜質感，清爽裡洋溢著耐 人尋味的餘韻。</p>
+                            <div class="tt"> <span class="por">荔枝好芒生乳捲<span class="icon2 abs"><img src="img/new.png" alt=""/></span></span></div>
+                            <p>泡芙蛋糕/北海道奶霜/芒果奶霜/荔枝果肉Ｑ彈柔軟的蛋糕捲入北海道奶霜的清爽和芒果奶霜的濃郁，再搭配風味獨特的荔枝果肉，讓舌尖蹦跳出和諧又令人讚嘆的創意新香。</p>
                             <div class="price exclusive"><span class="org">原價 $450</span>
                                 <sapn><span>YTM 獨家 </span><span class="red">$399</span></sapn>
-                            </div>
+                            </div><a class="btn" href="#" data-text="立即訂購">立即訂購</a>
                         </div>
                         <div class="item">
                             <div class="picBox por">
@@ -172,15 +172,15 @@
                                 <div class="tape2 abs none-m"><img src="img/tape.png" alt=""/>
                                 </div>
                             </div>
-                            <div class="tt"> <span class="por">生乳捲-原味<span class="icon3 abs"><img src="img/crown.png" alt=""/></span></span></div>
-                            <p>來自北海道的乳源，搭配 上昭和蛋糕專用麵粉製成 的蛋糕， 一口咬下感受奶霜入口即化的輕盈口感。 一口咬下感受奶霜入口即化的輕盈口感。</p>
-                            <div class="price red">$380</div>
+                            <div class="tt"> <span class="por">亞尼克生乳捲(原味)<span class="icon3 abs"><img src="img/crown.png" alt=""/></span></span></div>
+                            <p>泡芙蛋糕/北海道奶霜日本昭和蛋糕專用麵粉製成的泡芙蛋糕Q 彈柔軟，清爽的奶霜風味，就像現飲一杯北海道鮮乳，細緻如霜淇淋般在嘴裡化開。</p>
+                            <div class="price red">$380</div><a class="btn" href="#" data-text="立即訂購">立即訂購</a>
                         </div>
                     </div>
                     <div class="gift flex-mid">
                         <div class="giftInfo por">
                             <h2> <span class="por">購買生乳捲<span class="tt-gift abs"><img src="asset/svg/gift.svg" alt=""/></span></span><span class="red">即贈『生乳捲輕巧袋』</span></h2>
-                            <p> <span>YTM 生乳捲每日新鮮配送冷藏。</span><span>購買時我們將隨包裝附贈『生乳捲輕巧袋』 </span><span>方便您提領後放入保冷劑， </span><span>以維持生乳捲最新鮮狀態。</span></p>
+                            <p> <span>YTM 生乳捲每日冷藏新鮮配送</span><span>購買時我們將隨包裝附贈『生乳捲輕巧袋』 </span><span>方便您提領後放入保冷劑， </span><span>以維持生乳捲最新鮮狀態。</span></p>
                             <div class="gift-bag abs">
                                 <div class="inner show">
                                     <div class="bag"><img src="img/gift-bag.png" alt=""/>
@@ -206,7 +206,7 @@
                     <div class="main flex-mid">
                         <div class="item por">
                             <ul>
-                                <li>『線上訂 線下取 查詢庫存 即時方便』</li>
+                                <li>官網訂購2HRS提領 查詢庫存 即時方便</li>
                                 <li><span>不論您是直接購買、訂單取貨，</span><span>或會員隨享卡提領，都能輕易上手</span></li>
                                 <li><a class="videoBox por" href="#" data-video="QEjhlFilViI"><span class="pic"><img src="img/video2.jpg" alt=""/></span><span class="icon-play"><img src="asset/svg/play.svg" alt=""/></span></a></li>
                                 <li class="red"><span class="por line-cir">購買流程簡單方便</span></li>
@@ -214,7 +214,7 @@
                         </div>
                         <div class="item">
                             <ul>
-                                <li>『不偷工 不減料 新鮮製作 新鮮販售』</li>
+                                <li>不偷工 不減料 新鮮製作 新鮮販售</li>
                                 <li><span>亞尼克重視食品安全與衛生，</span><span>高規格的維護 SOP 將確保產品新鮮供應</span></li>
                                 <li><a class="videoBox por" href="#" data-video="CW4mmVENANo"><span class="pic"><img src="img/video3.jpg" alt=""/></span><span class="icon-play"><img src="asset/svg/play.svg" alt=""/></span></a></li>
                                 <li class="red"><span class="por line-cir">定時維護安全衛生</span></li>
@@ -226,7 +226,7 @@
                 <section class="feature">
                     <h2><span class="por"><span class="ytm"><img src="img/ytm.png" alt=""/></span><span>服務特色</span><span class="line-red abs"><img src="img/line-m-2.png" alt=""/></span><span class="deco abs"><img src="img/tt-hightline.png" alt=""/></span></span></h2>
                     <ul class="flex-mid">
-                        <li class="bag"><span class="icon"><img src="img/bag.png" alt=""/></span><span class="tt">購買便利</span><span class="txt"><span>據點更多</span><span>站內不打烊</span></span></li>
+                        <li class="bag"><span class="icon"><img src="img/bag.png" alt=""/></span><span class="tt">購買便利</span><span class="txt"><span>據點更多</span><span>服務不打烊</span></span></li>
                         <li class="cake"><span class="icon"><img src="img/cake.png" alt=""/></span><span class="tt">新鮮衛生</span><span class="txt"><span>高規格品管</span><span>安全清潔</span></span></li>
                         <li class="pay"><span class="icon"><img src="img/mrt-card.png" alt=""/></span><span class="tt">多元支付</span><span class="txt"><span>免現金</span><span>支援隨享卡/悠遊卡/<span class="break-m">信用卡</span></span></span></li>
                         <li class="buy"><span class="icon"><img src="img/coin.png" alt=""/></span><span class="tt">團購模式</span><span class="txt"><span>線上寄捲</span><span>大量購買提領更優惠!</span></span></li>
