調文字、給客戶v9

--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
                                 </div>
                             </div>
                             <div class="tt"> <span class="por">北海道起司生乳捲<span class="icon1 abs"><img src="img/menu-2.png" alt=""/></span></span></div>
-                            <p class="cheese">泡芙蛋糕/北海道奶霜/北海道高梨起司/伊思尼法國諾曼第白起司找到兩種起司與北海道奶霜融合的絕佳比例，可以同時享受起司獨特的乳酸風味和入口即融的的奶霜質地，冰涼微酸，比優格更加清爽迷人。</p>
+                            <p class="cheese"><b>泡芙蛋糕/北海道奶霜/北海道高梨起司/伊思尼法國諾曼第白起司</b><br>找到兩種起司與北海道奶霜融合的絕佳比例，可以同時享受起司獨特的乳酸風味和入口即融的的奶霜質地，冰涼微酸，比優格更加清爽迷人。</p><br>
                             <div class="price red">$420</div><a class="btn" href="#" data-text="立即訂購">立即訂購</a>
                         </div>
                         <div class="item">
@@ -160,7 +160,7 @@
                                 </div>
                             </div>
                             <div class="tt"> <span class="por">荔枝好芒生乳捲<span class="icon2 abs"><img src="img/new.png" alt=""/></span></span></div>
-                            <p>泡芙蛋糕/北海道奶霜/芒果奶霜/荔枝果肉Ｑ彈柔軟的蛋糕捲入北海道奶霜的清爽和芒果奶霜的濃郁，再搭配風味獨特的荔枝果肉，讓舌尖蹦跳出和諧又令人讚嘆的創意新香。</p>
+                            <p><b>泡芙蛋糕/北海道奶霜/芒果奶霜/荔枝果肉</b><br>Ｑ彈柔軟的蛋糕捲入北海道奶霜的清爽和芒果奶霜的濃郁，再搭配風味獨特的荔枝果肉，讓舌尖蹦跳出和諧又令人讚嘆的創意新香。</p>
                             <div class="price exclusive"><span class="org">原價 $450</span>
                                 <sapn><span>YTM 獨家 </span><span class="red">$399</span></sapn>
                             </div><a class="btn" href="#" data-text="立即訂購">立即訂購</a>
@@ -173,7 +173,7 @@
                                 </div>
                             </div>
                             <div class="tt"> <span class="por">亞尼克生乳捲(原味)<span class="icon3 abs"><img src="img/crown.png" alt=""/></span></span></div>
-                            <p>泡芙蛋糕/北海道奶霜日本昭和蛋糕專用麵粉製成的泡芙蛋糕Q 彈柔軟，清爽的奶霜風味，就像現飲一杯北海道鮮乳，細緻如霜淇淋般在嘴裡化開。</p>
+                            <p><b>泡芙蛋糕/北海道奶霜</b><br>日本昭和蛋糕專用麵粉製成的泡芙蛋糕Q 彈柔軟，清爽的奶霜風味，就像現飲一杯北海道鮮乳，細緻如霜淇淋般在嘴裡化開。</p><br>
                             <div class="price red">$380</div><a class="btn" href="#" data-text="立即訂購">立即訂購</a>
                         </div>
                     </div>
